# android-libzipsharp

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  ArchiveGlobalFlags.cs  CMakeLists.txt  CompressionMethod.cs  EncryptionMethod.cs  EntryExtractEventArgs.cs  EntryPermissions.cs  ErrorCode.cs  ErrorType.cs  ExtraField.cs  ExtraField_ExtendedTimestamp.cs  ExtraField_InfoZipUnix3rdGeneration.cs  ExtraField_InfoZipUnixOriginal.cs  ExtraField_InfoZipUnixType2.cs  ExtraField_UnixIDBase.cs  IPlatformOptions.cs  IPlatformServices.cs  KnownExtraFields.cs  LICENSE  LibZipSharp.props  Native.cs  NuGet.Config  OpenFlags.cs  OperatingSystem.cs  OperationFlags.cs  PlatformServices.Unix.cs  PlatformServices.cs  README.md  SignList.xml  SourceCommand.cs  StatFlags.cs  UnixExternalPermissions.cs  UnixPlatformOptions.cs  UnixPlatformServices.cs  UnixZipArchive.cs  UnixZipEntry.Unix.cs  UnixZipEntry.cs  (+38 more)
.config/: tsaoptions.json
.config/1espt/: PipelineAutobaseliningConfig.yml
.gdn/: .gdnsuppress
LibZipSharp/: Xamarin.LibZipSharp.targets  Xamarin.LibZipSharp.targets.in  libZipSharp.csproj  libZipSharp.targets  product.snk
LibZipSharp.UnitTest/: LibZipSharp.UnitTest.csproj  NOTICE.txt  ZipArchiveEx.cs  ZipArchiveExTest.cs  ZipTests.cs  ZipWrapper.cs  characters_players.json  info.json  object_spawn.json  packaged_resources
LibZipSharp/Mono.Posix/Mono.Unix/: UnixEncoding.cs  UnixIOException.cs
LibZipSharp/Mono.Posix/Mono.Unix.Native/: Errno.cs  FilePermissions.cs  Syscall.cs  Timespec.cs  Timeval.cs
LibZipSharp/Properties/: Resources.Designer.cs  Resources.cs.resx  Resources.de.resx  Resources.es.resx  Resources.fr.resx  Resources.it.resx  Resources.ja.resx  Resources.ko.resx  Resources.pl.resx  Resources.pt-BR.resx  Resources.ru.resx  Resources.tr.resx  Resources.zh-Hans.resx  Resources.zh-Hant.resx
LibZipSharp/Properties/xlf/: Resources.de.xlf  Resources.it.xlf  Resources.ja.xlf  Resources.ko.xlf  Resources.ru.xlf  Resources.tr.xlf  Resources.zh-Hant.xlf
LibZipSharp/Xamarin.Tools.Zip/: ArchiveGlobalFlags.cs  Constants.cs.in  EncryptionMethod.cs  EntryExtractEventArgs.cs  EntryPermissions.cs  ErrorCode.cs  ErrorType.cs  ExtraField.cs  ExtraField_InfoZipUnixOriginal.cs  ExtraField_InfoZipUnixType2.cs  ExtraField_UnixIDBase.cs  IPlatformOptions.cs  IPlatformServices.cs  Info.cs  KnownExtraFields.cs  Native.cs  OpenFlags.cs  OperatingSystem.cs  OperationFlags.cs  PlatformServices.Unix.cs  PlatformServices.cs  SourceCommand.cs  UnixExternalPermissions.cs  UnixPlatformServices.cs  UnixZipArchive.cs  UnixZipEntry.Unix.cs  Utilities.Unix.cs  Utilities.cs  Versions.cs  WindowsPlatformOptions.cs  WindowsPlatformServices.cs  WindowsZipArchive.cs  WindowsZipEntry.cs  ZipArchive.Unix.cs  ZipArchive.cs  ZipEntry.Unix.cs  ZipEntry.cs  ZipIOException.cs
Localize/: LocProject.json
Localize/loc/cs/LibZipSharp/Properties/: Resources.resx.lcl
Localize/loc/de/LibZipSharp/Properties/: Resources.resx.lcl
Localize/loc/es/LibZipSharp/Properties/: Resources.resx.lcl
Localize/loc/fr/LibZipSharp/Properties/: Resources.resx.lcl
Localize/loc/it/LibZipSharp/Properties/: Resources.resx.lcl
Localize/loc/ja/LibZipSharp/Properties/: Resources.resx.lcl
Localize/loc/ko/LibZipSharp/Properties/: Resources.resx.lcl
Localize/loc/pl/LibZipSharp/Properties/: Resources.resx.lcl
Localize/loc/pt-BR/LibZipSharp/Properties/: Resources.resx.lcl
Localize/loc/ru/LibZipSharp/Properties/: Resources.resx.lcl
Localize/loc/tr/LibZipSharp/Properties/: Resources.resx.lcl
Localize/loc/zh-Hans/LibZipSharp/Properties/: Resources.resx.lcl
Localize/loc/zh-Hant/LibZipSharp/Properties/: Resources.resx.lcl
Mono.Posix/Mono.Unix/: UnixMarshal.cs
Mono.Posix/Mono.Unix.Native/: Errno.cs  FilePermissions.cs  NativeConvert.generated.cs  Stat.cs  Stdlib.cs  Syscall.cs  Timespec.cs  Timeval.cs
Properties/: AssemblyInfo.cs  Resources.resx
Properties/xlf/: Resources.cs.xlf  Resources.es.xlf  Resources.fr.xlf  Resources.pl.xlf  Resources.pt-BR.xlf  Resources.zh-Hans.xlf
ZipBenchmark/: Performance.cs  Program.cs  ZipBenchmark.csproj
ZipTest/: Program.cs  ZipTest.csproj
ZipTest/Properties/: AssemblyInfo.cs
build-tools/automation/: ApiScanExclusionList.in.xml  ApiScanExclusionList.xml
build-tools/automation/yaml-templates/: stage-publish.yml
data/: bzip2.pc.in
native/: helpers.hh  sizes.cc  sizes.hh  values.cc  values.hh  version.cc  version.hh
yaml-templates/: stage-build.yml  stage-test.yml  use-dot-net.yaml  variables.yml
